# ML_telco_customer_churn

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirement.txt
.dvc/: config
.github/actions/gerar-relatorio-commit/: action.yml
.github/actions/lint/: action.yml
.github/actions/preparar-dados/: action.yml
.github/actions/testes/: action.yml
.github/actions/testes-unitarios/: action.yml
.github/workflows/: gerar-relatorio-commit.yml  pr-pull.yml  push.yml  tech-challenge.yml
data/processed/: .gitignore  telco_churn_encoded.csv  teste-1-variaveis_explicaveis.csv  teste-2-variaveis_explicaveis.csv.dvc
data/raw/: .gitignore
docs/: 0- ml_canvas_fase1.md  1- definicao_metricas.md  ANALISE_DE_NEGOCIO.md  deploy_monitoramento.md  eda_data_readiness_fase1.md  metricas_negocio.md  ml_canvas_fase1.md  model_card.md  plano_experimentos.md  requisitos_projeto.md  roteiro_video_star.md
docs/prompts/: ANALISE_DE_NEGOCIO.md
notebooks/: 02_metricas_e_avaliacao.ipynb  EDA.ipynb  EDA.py  EDA_Normalizacao.ipynb
report/: relatorio.py  relatorio_commit.md  relatorio_fase1.md
report/publicacao_modelo_dev/: resultados_modelos_fase1.csv
src/: api.py  avaliador.py  data_classifier.py  data_prep.py  load.py  main.py  metrics.py  mlp_model.py  model_factory.py  pipeline.py  preprocess.py  schema.py  sklearn_mlp_model.py  sklearn_pipeline.py  train.py  trainer.py  utils.py
src/config/: api_logging_middleware.py  logging_config.py
src/data/: ingestao.py
src/evaluation/: graficos_justificativa.py  metricas.py
src/features/: preprocessamento.py
src/models/: EDA.py  modelos.py  treino.py  treino_modelos_arvore.py
src/prometheus/: alerts.yml  prometheus.yml
src/servico/: __init__.py  inferencia.py
src/utils/: __init__.py  arquivo.py  gerar_relatorio_commit.py
tests/: test_api.py  test_api_smoke.py  test_avaliador.py  test_data_prep.py  test_e2e_docker_api.py  test_estrutura_projeto.py  test_inferencia.py  test_mlp_trainer.py  test_model_factory.py  test_preprocess.py  test_preprocessamento.py  test_schema.py  test_treino_baseline.py  test_treino_modelos_arvore.py
